// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`library > matches the snapshot 1`] = `
"<div class="column centerAll loadingData" style="display: none;"><span class="mainLoader"><span class="headphones"><svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" viewBox="0 0 24 24" width="75" xmlns="http://www.w3.org/2000/svg"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="centerItems loader"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visuallyHidden">Loading data</span></span></div>
<div class="mainContent">
  <div class="column centerAll noMediaMessage">
    <phwaveformslash size="50"></phwaveformslash>
    <p>No media found.</p>
  </div>
</div>"
`;

exports[`library > when data returns a value > matches the snapshot 1`] = `
"<div class="column centerAll loadingData" style="display: none;"><span class="mainLoader"><span class="headphones"><svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" viewBox="0 0 24 24" width="75" xmlns="http://www.w3.org/2000/svg"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="centerItems loader"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visuallyHidden">Loading data</span></span></div>
<div class="mainContent">
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Albums <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <div class="mBL carouselSwiper">
    <swiper-container>
      <swiper-slide data-test-id="random-album-item">
        <article class="interactionWrapper layoutItem" draggable="true">
          <div class="layoutImage albumImageWrapper">
            <figure><a class="interactionLink" draggable="false" title="Go to album album-0">
                <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to album album-0" class="image" draggable="false" loading="lazy" src="image"></div>
              </a></figure>
            <div class="hideOnListLayout actions"><button class="centerItems buttonLink themeHoverButton themeHoverButton" draggable="false" type="button" title="Play album album-0">
                <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play album album-0</span>
              </button>
              <div class="actionsRight"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike album">
                  <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike album</span>
                </button>
                <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
                    <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
                  </button>
                  <!--v-if-->
                </div>
              </div>
            </div>
          </div>
          <div class="layoutContent">
            <p class="mBXS strong smallFont clamp2"><a aria-label="Go to album album-0" class="layoutLink" draggable="false">album-0</a></p>
            <ul class="commaList smallFont clamp2">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
            </ul>
          </div>
        </article>
      </swiper-slide>
      <swiper-slide data-test-id="random-album-item">
        <article class="interactionWrapper layoutItem" draggable="true">
          <div class="layoutImage albumImageWrapper">
            <figure><a class="interactionLink" draggable="false" title="Go to album album-1">
                <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to album album-1" class="image" draggable="false" loading="lazy" src="image"></div>
              </a></figure>
            <div class="hideOnListLayout actions"><button class="centerItems buttonLink themeHoverButton themeHoverButton" draggable="false" type="button" title="Play album album-1">
                <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play album album-1</span>
              </button>
              <div class="actionsRight"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike album">
                  <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike album</span>
                </button>
                <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
                    <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
                  </button>
                  <!--v-if-->
                </div>
              </div>
            </div>
          </div>
          <div class="layoutContent">
            <p class="mBXS strong smallFont clamp2"><a aria-label="Go to album album-1" class="layoutLink" draggable="false">album-1</a></p>
            <ul class="commaList smallFont clamp2">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
            </ul>
          </div>
        </article>
      </swiper-slide>
    </swiper-container><button class="centerItems buttonLink previous previous" draggable="false" type="button">
      <phcaretdoubleleft aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleleft><span class="clamp text visuallyHidden"> Previous slide </span>
    </button><button class="centerItems buttonLink next next" draggable="false" type="button">
      <phcaretdoubleright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleright><span class="clamp text visuallyHidden"> Next slide </span>
    </button>
  </div>
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Artists <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <div class="mBL carouselSwiper">
    <swiper-container>
      <swiper-slide data-test-id="random-artist-item">
        <article class="layoutItem">
          <figure class="layoutImage"><a class="interactionLink" draggable="false" title="Go to artist artist-0">
              <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-0" class="image" draggable="false" loading="lazy" src="image"></div>
            </a></figure>
          <div class="layoutContent">
            <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-0" class="layoutLink" draggable="false">artist-0</a></p>
          </div>
        </article>
      </swiper-slide>
      <swiper-slide data-test-id="random-artist-item">
        <article class="layoutItem">
          <figure class="layoutImage"><a class="interactionLink" draggable="false" title="Go to artist artist-1">
              <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-1" class="image" draggable="false" loading="lazy" src="image"></div>
            </a></figure>
          <div class="layoutContent">
            <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-1" class="layoutLink" draggable="false">artist-1</a></p>
          </div>
        </article>
      </swiper-slide>
      <swiper-slide data-test-id="random-artist-item">
        <article class="layoutItem">
          <figure class="layoutImage"><a class="interactionLink" draggable="false" title="Go to artist artist-2">
              <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-2" class="image" draggable="false" loading="lazy" src="image"></div>
            </a></figure>
          <div class="layoutContent">
            <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-2" class="layoutLink" draggable="false">artist-2</a></p>
          </div>
        </article>
      </swiper-slide>
    </swiper-container><button class="centerItems buttonLink previous previous" draggable="false" type="button">
      <phcaretdoubleleft aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleleft><span class="clamp text visuallyHidden"> Previous slide </span>
    </button><button class="centerItems buttonLink next next" draggable="false" type="button">
      <phcaretdoubleright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleright><span class="clamp text visuallyHidden"> Next slide </span>
    </button>
  </div>
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Genres <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <div class="mBL carouselSwiper">
    <swiper-container>
      <swiper-slide data-test-id="random-genre-item"><a aria-label="View all albums with Rock genre" class="centerAll genreLink" draggable="false">Rock</a></swiper-slide>
      <swiper-slide data-test-id="random-genre-item"><a aria-label="View all albums with Rock genre" class="centerAll genreLink" draggable="false">Rock</a></swiper-slide>
    </swiper-container><button class="centerItems buttonLink previous previous" draggable="false" type="button">
      <phcaretdoubleleft aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleleft><span class="clamp text visuallyHidden"> Previous slide </span>
    </button><button class="centerItems buttonLink next next" draggable="false" type="button">
      <phcaretdoubleright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleright><span class="clamp text visuallyHidden"> Next slide </span>
    </button>
  </div>
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Playlist <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <playlists-list-stub playlists="[object Object],[object Object]"></playlists-list-stub>
</div>"
`;

exports[`library > when data returns a value > when artists is an empty array > matches the snapshot 1`] = `
"<div class="column centerAll loadingData" style="display: none;"><span class="mainLoader"><span class="headphones"><svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" viewBox="0 0 24 24" width="75" xmlns="http://www.w3.org/2000/svg"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="centerItems loader"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visuallyHidden">Loading data</span></span></div>
<div class="mainContent">
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Albums <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <div class="mBL carouselSwiper">
    <swiper-container>
      <swiper-slide data-test-id="random-album-item">
        <article class="interactionWrapper layoutItem" draggable="true">
          <div class="layoutImage albumImageWrapper">
            <figure><a class="interactionLink" draggable="false" title="Go to album album-0">
                <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to album album-0" class="image" draggable="false" loading="lazy" src="image"></div>
              </a></figure>
            <div class="hideOnListLayout actions"><button class="centerItems buttonLink themeHoverButton themeHoverButton" draggable="false" type="button" title="Play album album-0">
                <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play album album-0</span>
              </button>
              <div class="actionsRight"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike album">
                  <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike album</span>
                </button>
                <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
                    <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
                  </button>
                  <!--v-if-->
                </div>
              </div>
            </div>
          </div>
          <div class="layoutContent">
            <p class="mBXS strong smallFont clamp2"><a aria-label="Go to album album-0" class="layoutLink" draggable="false">album-0</a></p>
            <ul class="commaList smallFont clamp2">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
            </ul>
          </div>
        </article>
      </swiper-slide>
      <swiper-slide data-test-id="random-album-item">
        <article class="interactionWrapper layoutItem" draggable="true">
          <div class="layoutImage albumImageWrapper">
            <figure><a class="interactionLink" draggable="false" title="Go to album album-1">
                <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to album album-1" class="image" draggable="false" loading="lazy" src="image"></div>
              </a></figure>
            <div class="hideOnListLayout actions"><button class="centerItems buttonLink themeHoverButton themeHoverButton" draggable="false" type="button" title="Play album album-1">
                <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play album album-1</span>
              </button>
              <div class="actionsRight"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike album">
                  <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike album</span>
                </button>
                <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
                    <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
                  </button>
                  <!--v-if-->
                </div>
              </div>
            </div>
          </div>
          <div class="layoutContent">
            <p class="mBXS strong smallFont clamp2"><a aria-label="Go to album album-1" class="layoutLink" draggable="false">album-1</a></p>
            <ul class="commaList smallFont clamp2">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
            </ul>
          </div>
        </article>
      </swiper-slide>
    </swiper-container><button class="centerItems buttonLink previous previous" draggable="false" type="button">
      <phcaretdoubleleft aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleleft><span class="clamp text visuallyHidden"> Previous slide </span>
    </button><button class="centerItems buttonLink next next" draggable="false" type="button">
      <phcaretdoubleright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleright><span class="clamp text visuallyHidden"> Next slide </span>
    </button>
  </div>
  <!--v-if-->
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Genres <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <div class="mBL carouselSwiper">
    <swiper-container>
      <swiper-slide data-test-id="random-genre-item"><a aria-label="View all albums with Rock genre" class="centerAll genreLink" draggable="false">Rock</a></swiper-slide>
      <swiper-slide data-test-id="random-genre-item"><a aria-label="View all albums with Rock genre" class="centerAll genreLink" draggable="false">Rock</a></swiper-slide>
    </swiper-container><button class="centerItems buttonLink previous previous" draggable="false" type="button">
      <phcaretdoubleleft aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleleft><span class="clamp text visuallyHidden"> Previous slide </span>
    </button><button class="centerItems buttonLink next next" draggable="false" type="button">
      <phcaretdoubleright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleright><span class="clamp text visuallyHidden"> Next slide </span>
    </button>
  </div>
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Playlist <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <playlists-list-stub playlists="[object Object],[object Object]"></playlists-list-stub>
</div>"
`;

exports[`library > when data returns a value > when genres is an empty array > matches the snapshot 1`] = `
"<div class="column centerAll loadingData" style="display: none;"><span class="mainLoader"><span class="headphones"><svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" viewBox="0 0 24 24" width="75" xmlns="http://www.w3.org/2000/svg"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="centerItems loader"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visuallyHidden">Loading data</span></span></div>
<div class="mainContent">
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Albums <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <div class="mBL carouselSwiper">
    <swiper-container>
      <swiper-slide data-test-id="random-album-item">
        <article class="interactionWrapper layoutItem" draggable="true">
          <div class="layoutImage albumImageWrapper">
            <figure><a class="interactionLink" draggable="false" title="Go to album album-0">
                <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to album album-0" class="image" draggable="false" loading="lazy" src="image"></div>
              </a></figure>
            <div class="hideOnListLayout actions"><button class="centerItems buttonLink themeHoverButton themeHoverButton" draggable="false" type="button" title="Play album album-0">
                <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play album album-0</span>
              </button>
              <div class="actionsRight"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike album">
                  <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike album</span>
                </button>
                <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
                    <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
                  </button>
                  <!--v-if-->
                </div>
              </div>
            </div>
          </div>
          <div class="layoutContent">
            <p class="mBXS strong smallFont clamp2"><a aria-label="Go to album album-0" class="layoutLink" draggable="false">album-0</a></p>
            <ul class="commaList smallFont clamp2">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
            </ul>
          </div>
        </article>
      </swiper-slide>
      <swiper-slide data-test-id="random-album-item">
        <article class="interactionWrapper layoutItem" draggable="true">
          <div class="layoutImage albumImageWrapper">
            <figure><a class="interactionLink" draggable="false" title="Go to album album-1">
                <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to album album-1" class="image" draggable="false" loading="lazy" src="image"></div>
              </a></figure>
            <div class="hideOnListLayout actions"><button class="centerItems buttonLink themeHoverButton themeHoverButton" draggable="false" type="button" title="Play album album-1">
                <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play album album-1</span>
              </button>
              <div class="actionsRight"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike album">
                  <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike album</span>
                </button>
                <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
                    <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
                  </button>
                  <!--v-if-->
                </div>
              </div>
            </div>
          </div>
          <div class="layoutContent">
            <p class="mBXS strong smallFont clamp2"><a aria-label="Go to album album-1" class="layoutLink" draggable="false">album-1</a></p>
            <ul class="commaList smallFont clamp2">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
            </ul>
          </div>
        </article>
      </swiper-slide>
    </swiper-container><button class="centerItems buttonLink previous previous" draggable="false" type="button">
      <phcaretdoubleleft aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleleft><span class="clamp text visuallyHidden"> Previous slide </span>
    </button><button class="centerItems buttonLink next next" draggable="false" type="button">
      <phcaretdoubleright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleright><span class="clamp text visuallyHidden"> Next slide </span>
    </button>
  </div>
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Artists <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <div class="mBL carouselSwiper">
    <swiper-container>
      <swiper-slide data-test-id="random-artist-item">
        <article class="layoutItem">
          <figure class="layoutImage"><a class="interactionLink" draggable="false" title="Go to artist artist-0">
              <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-0" class="image" draggable="false" loading="lazy" src="image"></div>
            </a></figure>
          <div class="layoutContent">
            <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-0" class="layoutLink" draggable="false">artist-0</a></p>
          </div>
        </article>
      </swiper-slide>
      <swiper-slide data-test-id="random-artist-item">
        <article class="layoutItem">
          <figure class="layoutImage"><a class="interactionLink" draggable="false" title="Go to artist artist-1">
              <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-1" class="image" draggable="false" loading="lazy" src="image"></div>
            </a></figure>
          <div class="layoutContent">
            <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-1" class="layoutLink" draggable="false">artist-1</a></p>
          </div>
        </article>
      </swiper-slide>
      <swiper-slide data-test-id="random-artist-item">
        <article class="layoutItem">
          <figure class="layoutImage"><a class="interactionLink" draggable="false" title="Go to artist artist-2">
              <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-2" class="image" draggable="false" loading="lazy" src="image"></div>
            </a></figure>
          <div class="layoutContent">
            <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-2" class="layoutLink" draggable="false">artist-2</a></p>
          </div>
        </article>
      </swiper-slide>
    </swiper-container><button class="centerItems buttonLink previous previous" draggable="false" type="button">
      <phcaretdoubleleft aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleleft><span class="clamp text visuallyHidden"> Previous slide </span>
    </button><button class="centerItems buttonLink next next" draggable="false" type="button">
      <phcaretdoubleright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleright><span class="clamp text visuallyHidden"> Next slide </span>
    </button>
  </div>
  <!--v-if-->
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Playlist <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <playlists-list-stub playlists="[object Object],[object Object]"></playlists-list-stub>
</div>"
`;

exports[`library > when data returns a value > when playlists is an empty array > matches the snapshot 1`] = `
"<div class="column centerAll loadingData" style="display: none;"><span class="mainLoader"><span class="headphones"><svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" viewBox="0 0 24 24" width="75" xmlns="http://www.w3.org/2000/svg"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="centerItems loader"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visuallyHidden">Loading data</span></span></div>
<div class="mainContent">
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Albums <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <div class="mBL carouselSwiper">
    <swiper-container>
      <swiper-slide data-test-id="random-album-item">
        <article class="interactionWrapper layoutItem" draggable="true">
          <div class="layoutImage albumImageWrapper">
            <figure><a class="interactionLink" draggable="false" title="Go to album album-0">
                <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to album album-0" class="image" draggable="false" loading="lazy" src="image"></div>
              </a></figure>
            <div class="hideOnListLayout actions"><button class="centerItems buttonLink themeHoverButton themeHoverButton" draggable="false" type="button" title="Play album album-0">
                <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play album album-0</span>
              </button>
              <div class="actionsRight"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike album">
                  <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike album</span>
                </button>
                <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
                    <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
                  </button>
                  <!--v-if-->
                </div>
              </div>
            </div>
          </div>
          <div class="layoutContent">
            <p class="mBXS strong smallFont clamp2"><a aria-label="Go to album album-0" class="layoutLink" draggable="false">album-0</a></p>
            <ul class="commaList smallFont clamp2">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
            </ul>
          </div>
        </article>
      </swiper-slide>
      <swiper-slide data-test-id="random-album-item">
        <article class="interactionWrapper layoutItem" draggable="true">
          <div class="layoutImage albumImageWrapper">
            <figure><a class="interactionLink" draggable="false" title="Go to album album-1">
                <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to album album-1" class="image" draggable="false" loading="lazy" src="image"></div>
              </a></figure>
            <div class="hideOnListLayout actions"><button class="centerItems buttonLink themeHoverButton themeHoverButton" draggable="false" type="button" title="Play album album-1">
                <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play album album-1</span>
              </button>
              <div class="actionsRight"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike album">
                  <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike album</span>
                </button>
                <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
                    <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
                  </button>
                  <!--v-if-->
                </div>
              </div>
            </div>
          </div>
          <div class="layoutContent">
            <p class="mBXS strong smallFont clamp2"><a aria-label="Go to album album-1" class="layoutLink" draggable="false">album-1</a></p>
            <ul class="commaList smallFont clamp2">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
            </ul>
          </div>
        </article>
      </swiper-slide>
    </swiper-container><button class="centerItems buttonLink previous previous" draggable="false" type="button">
      <phcaretdoubleleft aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleleft><span class="clamp text visuallyHidden"> Previous slide </span>
    </button><button class="centerItems buttonLink next next" draggable="false" type="button">
      <phcaretdoubleright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleright><span class="clamp text visuallyHidden"> Next slide </span>
    </button>
  </div>
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Artists <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <div class="mBL carouselSwiper">
    <swiper-container>
      <swiper-slide data-test-id="random-artist-item">
        <article class="layoutItem">
          <figure class="layoutImage"><a class="interactionLink" draggable="false" title="Go to artist artist-0">
              <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-0" class="image" draggable="false" loading="lazy" src="image"></div>
            </a></figure>
          <div class="layoutContent">
            <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-0" class="layoutLink" draggable="false">artist-0</a></p>
          </div>
        </article>
      </swiper-slide>
      <swiper-slide data-test-id="random-artist-item">
        <article class="layoutItem">
          <figure class="layoutImage"><a class="interactionLink" draggable="false" title="Go to artist artist-1">
              <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-1" class="image" draggable="false" loading="lazy" src="image"></div>
            </a></figure>
          <div class="layoutContent">
            <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-1" class="layoutLink" draggable="false">artist-1</a></p>
          </div>
        </article>
      </swiper-slide>
      <swiper-slide data-test-id="random-artist-item">
        <article class="layoutItem">
          <figure class="layoutImage"><a class="interactionLink" draggable="false" title="Go to artist artist-2">
              <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-2" class="image" draggable="false" loading="lazy" src="image"></div>
            </a></figure>
          <div class="layoutContent">
            <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-2" class="layoutLink" draggable="false">artist-2</a></p>
          </div>
        </article>
      </swiper-slide>
    </swiper-container><button class="centerItems buttonLink previous previous" draggable="false" type="button">
      <phcaretdoubleleft aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleleft><span class="clamp text visuallyHidden"> Previous slide </span>
    </button><button class="centerItems buttonLink next next" draggable="false" type="button">
      <phcaretdoubleright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleright><span class="clamp text visuallyHidden"> Next slide </span>
    </button>
  </div>
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Genres <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <div class="mBL carouselSwiper">
    <swiper-container>
      <swiper-slide data-test-id="random-genre-item"><a aria-label="View all albums with Rock genre" class="centerAll genreLink" draggable="false">Rock</a></swiper-slide>
      <swiper-slide data-test-id="random-genre-item"><a aria-label="View all albums with Rock genre" class="centerAll genreLink" draggable="false">Rock</a></swiper-slide>
    </swiper-container><button class="centerItems buttonLink previous previous" draggable="false" type="button">
      <phcaretdoubleleft aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleleft><span class="clamp text visuallyHidden"> Previous slide </span>
    </button><button class="centerItems buttonLink next next" draggable="false" type="button">
      <phcaretdoubleright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleright><span class="clamp text visuallyHidden"> Next slide </span>
    </button>
  </div>
  <!--v-if-->
</div>"
`;

exports[`library > when data returns a value > when playlists is not an empty array > when playlists has more than 8 items > matches the snapshot 1`] = `
"<div class="column centerAll loadingData" style="display: none;"><span class="mainLoader"><span class="headphones"><svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" viewBox="0 0 24 24" width="75" xmlns="http://www.w3.org/2000/svg"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="centerItems loader"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visuallyHidden">Loading data</span></span></div>
<div class="mainContent">
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Albums <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <div class="mBL carouselSwiper">
    <swiper-container>
      <swiper-slide data-test-id="random-album-item">
        <article class="interactionWrapper layoutItem" draggable="true">
          <div class="layoutImage albumImageWrapper">
            <figure><a class="interactionLink" draggable="false" title="Go to album album-0">
                <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to album album-0" class="image" draggable="false" loading="lazy" src="image"></div>
              </a></figure>
            <div class="hideOnListLayout actions"><button class="centerItems buttonLink themeHoverButton themeHoverButton" draggable="false" type="button" title="Play album album-0">
                <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play album album-0</span>
              </button>
              <div class="actionsRight"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike album">
                  <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike album</span>
                </button>
                <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
                    <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
                  </button>
                  <!--v-if-->
                </div>
              </div>
            </div>
          </div>
          <div class="layoutContent">
            <p class="mBXS strong smallFont clamp2"><a aria-label="Go to album album-0" class="layoutLink" draggable="false">album-0</a></p>
            <ul class="commaList smallFont clamp2">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
            </ul>
          </div>
        </article>
      </swiper-slide>
      <swiper-slide data-test-id="random-album-item">
        <article class="interactionWrapper layoutItem" draggable="true">
          <div class="layoutImage albumImageWrapper">
            <figure><a class="interactionLink" draggable="false" title="Go to album album-1">
                <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to album album-1" class="image" draggable="false" loading="lazy" src="image"></div>
              </a></figure>
            <div class="hideOnListLayout actions"><button class="centerItems buttonLink themeHoverButton themeHoverButton" draggable="false" type="button" title="Play album album-1">
                <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play album album-1</span>
              </button>
              <div class="actionsRight"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike album">
                  <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike album</span>
                </button>
                <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
                    <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
                  </button>
                  <!--v-if-->
                </div>
              </div>
            </div>
          </div>
          <div class="layoutContent">
            <p class="mBXS strong smallFont clamp2"><a aria-label="Go to album album-1" class="layoutLink" draggable="false">album-1</a></p>
            <ul class="commaList smallFont clamp2">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
            </ul>
          </div>
        </article>
      </swiper-slide>
    </swiper-container><button class="centerItems buttonLink previous previous" draggable="false" type="button">
      <phcaretdoubleleft aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleleft><span class="clamp text visuallyHidden"> Previous slide </span>
    </button><button class="centerItems buttonLink next next" draggable="false" type="button">
      <phcaretdoubleright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleright><span class="clamp text visuallyHidden"> Next slide </span>
    </button>
  </div>
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Artists <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <div class="mBL carouselSwiper">
    <swiper-container>
      <swiper-slide data-test-id="random-artist-item">
        <article class="layoutItem">
          <figure class="layoutImage"><a class="interactionLink" draggable="false" title="Go to artist artist-0">
              <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-0" class="image" draggable="false" loading="lazy" src="image"></div>
            </a></figure>
          <div class="layoutContent">
            <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-0" class="layoutLink" draggable="false">artist-0</a></p>
          </div>
        </article>
      </swiper-slide>
      <swiper-slide data-test-id="random-artist-item">
        <article class="layoutItem">
          <figure class="layoutImage"><a class="interactionLink" draggable="false" title="Go to artist artist-1">
              <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-1" class="image" draggable="false" loading="lazy" src="image"></div>
            </a></figure>
          <div class="layoutContent">
            <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-1" class="layoutLink" draggable="false">artist-1</a></p>
          </div>
        </article>
      </swiper-slide>
      <swiper-slide data-test-id="random-artist-item">
        <article class="layoutItem">
          <figure class="layoutImage"><a class="interactionLink" draggable="false" title="Go to artist artist-2">
              <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-2" class="image" draggable="false" loading="lazy" src="image"></div>
            </a></figure>
          <div class="layoutContent">
            <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-2" class="layoutLink" draggable="false">artist-2</a></p>
          </div>
        </article>
      </swiper-slide>
    </swiper-container><button class="centerItems buttonLink previous previous" draggable="false" type="button">
      <phcaretdoubleleft aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleleft><span class="clamp text visuallyHidden"> Previous slide </span>
    </button><button class="centerItems buttonLink next next" draggable="false" type="button">
      <phcaretdoubleright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleright><span class="clamp text visuallyHidden"> Next slide </span>
    </button>
  </div>
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Genres <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <div class="mBL carouselSwiper">
    <swiper-container>
      <swiper-slide data-test-id="random-genre-item"><a aria-label="View all albums with Rock genre" class="centerAll genreLink" draggable="false">Rock</a></swiper-slide>
      <swiper-slide data-test-id="random-genre-item"><a aria-label="View all albums with Rock genre" class="centerAll genreLink" draggable="false">Rock</a></swiper-slide>
    </swiper-container><button class="centerItems buttonLink previous previous" draggable="false" type="button">
      <phcaretdoubleleft aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleleft><span class="clamp text visuallyHidden"> Previous slide </span>
    </button><button class="centerItems buttonLink next next" draggable="false" type="button">
      <phcaretdoubleright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleright><span class="clamp text visuallyHidden"> Next slide </span>
    </button>
  </div>
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Playlist <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <playlists-list-stub playlists="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></playlists-list-stub>
</div>"
`;

exports[`library > when data returns a value > when randomAlbums is an empty array > matches the snapshot 1`] = `
"<div class="column centerAll loadingData" style="display: none;"><span class="mainLoader"><span class="headphones"><svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" viewBox="0 0 24 24" width="75" xmlns="http://www.w3.org/2000/svg"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="centerItems loader"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visuallyHidden">Loading data</span></span></div>
<div class="mainContent">
  <!--v-if-->
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Artists <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <div class="mBL carouselSwiper">
    <swiper-container>
      <swiper-slide data-test-id="random-artist-item">
        <article class="layoutItem">
          <figure class="layoutImage"><a class="interactionLink" draggable="false" title="Go to artist artist-0">
              <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-0" class="image" draggable="false" loading="lazy" src="image"></div>
            </a></figure>
          <div class="layoutContent">
            <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-0" class="layoutLink" draggable="false">artist-0</a></p>
          </div>
        </article>
      </swiper-slide>
      <swiper-slide data-test-id="random-artist-item">
        <article class="layoutItem">
          <figure class="layoutImage"><a class="interactionLink" draggable="false" title="Go to artist artist-1">
              <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-1" class="image" draggable="false" loading="lazy" src="image"></div>
            </a></figure>
          <div class="layoutContent">
            <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-1" class="layoutLink" draggable="false">artist-1</a></p>
          </div>
        </article>
      </swiper-slide>
      <swiper-slide data-test-id="random-artist-item">
        <article class="layoutItem">
          <figure class="layoutImage"><a class="interactionLink" draggable="false" title="Go to artist artist-2">
              <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-2" class="image" draggable="false" loading="lazy" src="image"></div>
            </a></figure>
          <div class="layoutContent">
            <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-2" class="layoutLink" draggable="false">artist-2</a></p>
          </div>
        </article>
      </swiper-slide>
    </swiper-container><button class="centerItems buttonLink previous previous" draggable="false" type="button">
      <phcaretdoubleleft aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleleft><span class="clamp text visuallyHidden"> Previous slide </span>
    </button><button class="centerItems buttonLink next next" draggable="false" type="button">
      <phcaretdoubleright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleright><span class="clamp text visuallyHidden"> Next slide </span>
    </button>
  </div>
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Genres <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <div class="mBL carouselSwiper">
    <swiper-container>
      <swiper-slide data-test-id="random-genre-item"><a aria-label="View all albums with Rock genre" class="centerAll genreLink" draggable="false">Rock</a></swiper-slide>
      <swiper-slide data-test-id="random-genre-item"><a aria-label="View all albums with Rock genre" class="centerAll genreLink" draggable="false">Rock</a></swiper-slide>
    </swiper-container><button class="centerItems buttonLink previous previous" draggable="false" type="button">
      <phcaretdoubleleft aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleleft><span class="clamp text visuallyHidden"> Previous slide </span>
    </button><button class="centerItems buttonLink next next" draggable="false" type="button">
      <phcaretdoubleright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretdoubleright><span class="clamp text visuallyHidden"> Next slide </span>
    </button>
  </div>
  <div class="centerItems spaceBetween">
    <h3 class="header"><a draggable="false"> Playlist <phcaretdoubleright class="moreIcon" size="18" weight="regular"></phcaretdoubleright></a></h3>
    <div class="centerItems"><a class="mobileOnly link" draggable="false"> See all </a></div>
  </div>
  <playlists-list-stub playlists="[object Object],[object Object]"></playlists-list-stub>
</div>"
`;
